--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "devDependencies": {
+    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/typography": "^0.4.0",
+    "postcss": "^8.2.10",
+    "postcss-import": "^14.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "stylelint": "^13.12.0",
+    "stylelint-config-recommended": "^4.0.0",
+    "stylelint-config-standard": "^21.0.0",
+    "tailwindcss": "^2.1.1",
     "vite": "^2.1.5",
     "vite-plugin-html": "^2.0.6"
   },
