--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "serve": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
